completed segementation-service microservice

--- a/locatory-backend/segmentation-service/app/tests/rfmtests/test_rfm_apis.ipynb
+++ b/locatory-backend/segmentation-service/app/tests/rfmtests/test_rfm_apis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'access_token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJlbnZpc2FnZWluc2lnaHRzIiwiZXhwIjoxNjA2MzI3ODkxfQ._5D0cCj8BnVDed_jjLcvFwxN4YX8ZLwCgn0LL2XfU0w', 'token_type': 'bearer'}\n"
+      "{'access_token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJlbnZpc2FnZWluc2lnaHRzIiwiZXhwIjoxNjA2Mzc4MzI5fQ.UnU_VQnuLn7HULAfSwx2BaQ341X-7eBRPjue1N2_kZQ', 'token_type': 'bearer'}\n"
      ]
     }
    ],
@@ -41,14 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "<Response [500]>\nExpecting value: line 1 column 1 (char 0)\n"
+      "<Response [200]>\n[{'_id': '4fb843d304c57182d4aa27bb39ca592b', 'M': 34.81, 'F': 1, 'R': 49, 'Duration_Days': 49, 'Avg_M': 0.71, 'Avg_F': 0.02, 'Avg_M_Score': 1, 'Avg_F_Score': 4, 'R_Score': 4, 'RFM_Score': 0.474, 'RFM_Label': 'D'}, {'_id': 'aa2ec7384c816e5766350628002e4f43', 'M': 86.37, 'F': 1, 'R': 40, 'Duration_Days': 40, 'Avg_M': 2.16, 'Avg_F': 0.025, 'Avg_M_Score': 3, 'Avg_F_Score': 5, 'R_Score': 4, 'RFM_Score': 0.632, 'RFM_Label': 'C'}, {'_id': '2eb2cf5942cc25d420e757c1c8d6ccbe', 'M': 48.81, 'F': 1, 'R': 72, 'Duration_Days': 72, 'Avg_M': 0.68, 'Avg_F': 0.014, 'Avg_M_Score': 1, 'Avg_F_Score': 2, 'R_Score': 3, 'RFM_Score': 0.316, 'RFM_Label': 'E'}]\n1.103552275999391\n"
      ]
     }
    ],
@@ -60,7 +62,7 @@
     "}\n",
     "\n",
     "data = {\n",
-    "  \"n_segments\": 0,\n",
+    "  \"n_segments\": 7,\n",
     "  \"data_period\": 3,\n",
     "  \"segment_separators\": [],\n",
     "  \"geography\": {\n",
@@ -74,8 +76,44 @@
     "    start = timeit.default_timer()\n",
     "    response = requests.post('http://127.0.0.1:8000/rfm/rfm_segmentation_with_parameters', data=json.dumps(data), headers=header)\n",
     "    print(response)\n",
-    "    category = response.json()\n",
-    "    print(category, timeit.default_timer() - start)\n",
+    "    rfm_segments = response.json()\n",
+    "    print(rfm_segments[:3])\n",
+    "    print(timeit.default_timer() - start)\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(str(e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<Response [200]>\n5fbe12a239dc2d382e904ce4\n2.0602724970012787\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Segmentation-service /rfm_segmentation_with_parameters\n",
+    "header={\n",
+    "   'content-type': 'application/json',\n",
+    "   'Authorization': 'Bearer '+auth_token['access_token']\n",
+    "}\n",
+    "\n",
+    "# ObjectId(\"5fbde042fd6d20542b9edbd5\")\n",
+    "data = {\"document_id\": \"5fbde042fd6d20542b9edbd5\"}\n",
+    "\n",
+    "try:\n",
+    "    start = timeit.default_timer()\n",
+    "    response = requests.post('http://127.0.0.1:8000/rfm/rfm_segmentation_with_saved_data', data=json.dumps(data), headers=header)\n",
+    "    print(response)\n",
+    "    rfm_segments = response.json()\n",
+    "    print(rfm_segments)\n",
+    "    print(timeit.default_timer() - start)\n",
     "    \n",
     "except Exception as e:\n",
     "    print(str(e))"
