updated requirements.txt and added document overwrite feature for RFMSegments collection

--- a/locatory-backend/segmentation-service/app/tests/rfmtests/test_rfm_apis.ipynb
+++ b/locatory-backend/segmentation-service/app/tests/rfmtests/test_rfm_apis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'access_token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJlbnZpc2FnZWluc2lnaHRzIiwiZXhwIjoxNjA2Mzc4MzI5fQ.UnU_VQnuLn7HULAfSwx2BaQ341X-7eBRPjue1N2_kZQ', 'token_type': 'bearer'}\n"
+      "{'access_token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJlbnZpc2FnZWluc2lnaHRzIiwiZXhwIjoxNjA2NDQ1MjI2fQ.AMMrhkE4ipT4iHZg9gBiulXAvJ4XKGw2U1ouJQxtISo', 'token_type': 'bearer'}\n"
      ]
     }
    ],
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "<Response [200]>\n5fbe12a239dc2d382e904ce4\n2.0602724970012787\n"
+      "<Response [200]>\n<pymongo.results.UpdateResult object at 0x7fd7591d8f40>\n2.053670820998377\n"
      ]
     }
    ],
