validated rfm labels with n_segments

--- a/locatory-backend/segmentation-service/app/tests/rfmtests/test_rfm_apis.ipynb
+++ b/locatory-backend/segmentation-service/app/tests/rfmtests/test_rfm_apis.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'access_token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJlbnZpc2FnZWluc2lnaHRzIiwiZXhwIjoxNjA2NDQ1MjI2fQ.AMMrhkE4ipT4iHZg9gBiulXAvJ4XKGw2U1ouJQxtISo', 'token_type': 'bearer'}\n"
+      "{'access_token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJlbnZpc2FnZWluc2lnaHRzIiwiZXhwIjoxNjA2NDk2ODQ2fQ.JQ3sagZ0e9W1c_VoX3ye8a_Jra_urliNC-XVmx24aHM', 'token_type': 'bearer'}\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -50,7 +50,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "<Response [200]>\n[{'_id': '4fb843d304c57182d4aa27bb39ca592b', 'M': 34.81, 'F': 1, 'R': 49, 'Duration_Days': 49, 'Avg_M': 0.71, 'Avg_F': 0.02, 'Avg_M_Score': 1, 'Avg_F_Score': 4, 'R_Score': 4, 'RFM_Score': 0.474, 'RFM_Label': 'D'}, {'_id': 'aa2ec7384c816e5766350628002e4f43', 'M': 86.37, 'F': 1, 'R': 40, 'Duration_Days': 40, 'Avg_M': 2.16, 'Avg_F': 0.025, 'Avg_M_Score': 3, 'Avg_F_Score': 5, 'R_Score': 4, 'RFM_Score': 0.632, 'RFM_Label': 'C'}, {'_id': '2eb2cf5942cc25d420e757c1c8d6ccbe', 'M': 48.81, 'F': 1, 'R': 72, 'Duration_Days': 72, 'Avg_M': 0.68, 'Avg_F': 0.014, 'Avg_M_Score': 1, 'Avg_F_Score': 2, 'R_Score': 3, 'RFM_Score': 0.316, 'RFM_Label': 'E'}]\n1.103552275999391\n"
+      "<Response [200]>\n[{'_id': 'd5b12b50bd73a2202321b2b094b80344', 'M': 98.56, 'F': 1, 'R': 88, 'Duration_Days': 88, 'Avg_M': 1.12, 'Avg_F': 0.011, 'Avg_M_Score': 2, 'Avg_F_Score': 1, 'R_Score': 3, 'RFM_Score': 0.316, 'RFM_Label': 'E'}, {'_id': '8d04d2021a6a3e1e48b0c6ce1c6bdacf', 'M': 199.6, 'F': 2, 'R': 58, 'Duration_Days': 58, 'Avg_M': 3.44, 'Avg_F': 0.034, 'Avg_M_Score': 4, 'Avg_F_Score': 7, 'R_Score': 4, 'RFM_Score': 0.789, 'RFM_Label': 'B'}, {'_id': 'd42189413c7699ea8214e0ec9e0cd70d', 'M': 87.11, 'F': 1, 'R': 85, 'Duration_Days': 85, 'Avg_M': 1.02, 'Avg_F': 0.012, 'Avg_M_Score': 1, 'Avg_F_Score': 1, 'R_Score': 3, 'RFM_Score': 0.263, 'RFM_Label': 'F'}]\n1.8746234709997225\n"
      ]
     }
    ],
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "<Response [200]>\n<pymongo.results.UpdateResult object at 0x7fd7591d8f40>\n2.053670820998377\n"
+      "<Response [200]>\n5fbf2f54355d39879a43f808\n0.33672803800027395\n"
      ]
     }
    ],
@@ -104,8 +104,8 @@
     "   'Authorization': 'Bearer '+auth_token['access_token']\n",
     "}\n",
     "\n",
-    "# ObjectId(\"5fbde042fd6d20542b9edbd5\")\n",
-    "data = {\"document_id\": \"5fbde042fd6d20542b9edbd5\"}\n",
+    "# ObjectId(\"5fbde042fd6d20542b9edbd5\"), ObjectId(\"5fbf2f545e46992fe1a67eaf\")\n",
+    "data = {\"document_id\": \"5fbf2f545e46992fe1a67eaf\"}\n",
     "\n",
     "try:\n",
     "    start = timeit.default_timer()\n",
